y.output
Terminaux inutilisés dans la grammaire

   tVOID
   tNULL
   tCONST
   tWHILE
   tFOR
   tDQ
   tARROW
   tPOINT
   tMOD
   tEXP
   tADDR
   tSPACE
   tRETURN
   tCOMMENT
   tMOINS


État 37 conflits: 1 décalage/réduction
État 38 conflits: 1 décalage/réduction
État 39 conflits: 4 décalage/réduction
État 41 conflits: 1 décalage/réduction
État 76 conflits: 2 décalage/réduction
État 77 conflits: 2 décalage/réduction


Grammaire

    0 $accept: Input $end

    1 Input: /* vide */
    2      | Input tNEWLINE
    3      | Input Egalite tPOINTVIRG
    4      | Input Declaration
    5      | Input If
    6      | Input Main

    7 Main: tINTEGER tMAIN tPO Arg tPF tAO Input tAF

    8 Arg: tINTEGER tWORD
    9    | tINTEGER tCO tCF tWORD
   10    | tINTEGER tPOINTER tWORD
   11    | /* vide */

   12 If: tIF tPO Condition tPF tAO Input tAF Else

   13 Else: tELSE tAO Input tAF
   14     | tELSE If
   15     | /* vide */

   16 Condition: Exp tEGALEGAL Exp
   17          | Exp tNOTEGAL Exp
   18          | Exp tSUP Exp
   19          | Exp tINF Exp
   20          | Exp tSUP tEGAL Exp
   21          | Exp tINF tEGAL Exp
   22          | Condition tOR Condition
   23          | Condition tAND Condition

   24 Exp: Exp tPLUS Exp
   25    | Exp tDIV Exp
   26    | Exp tMINUS Exp
   27    | Exp tPOINTER Exp
   28    | tNOMBRE
   29    | tWORD

   30 Egalite: Exp tEGAL Exp

   31 Declaration: tINTEGER tWORD DeclarationIntMemeLigne tPOINTVIRG
   32            | tINTEGER tWORD tEGAL Exp DeclarationIntEgalMemeLigne tPOINTVIRG
   33            | tINTEGER tWORD tCO tNOMBRE tCF DeclarationIntTabMemeLigne tPOINTVIRG
   34            | tCHAR tWORD tCO tNOMBRE tCF tPOINTVIRG
   35            | tCHAR tPOINTER tWORD tPOINTVIRG
   36            | tCHAR tWORD DeclarationCharMemeLigne tPOINTVIRG
   37            | tCHAR tWORD tEGAL tNOMBRE tPOINTVIRG
   38            | tCHAR tWORD tEGAL tSQ tLETTRE tSQ tPOINTVIRG
   39            | tCHAR tWORD tEGAL tCO tNOMBRE tCF tPOINTVIRG

   40 DeclarationIntMemeLigne: tVIRG tWORD DeclarationIntMemeLigne
   41                        | /* vide */

   42 DeclarationIntEgalMemeLigne: tVIRG tWORD tEGAL Exp DeclarationIntEgalMemeLigne
   43                            | /* vide */

   44 DeclarationIntTabMemeLigne: tVIRG tWORD tCO tNOMBRE tCF DeclarationIntTabMemeLigne
   45                           | /* vide */

   46 DeclarationCharMemeLigne: tVIRG tWORD DeclarationCharMemeLigne
   47                         | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINTEGER (258) 7 8 9 10 31 32 33
tCHAR (259) 34 35 36 37 38 39
tVOID (260)
tNULL (261)
tCONST (262)
tMAIN (263) 7
tIF (264) 12
tELSE (265) 13 14
tWHILE (266)
tFOR (267)
tAO (268) 7 12 13
tAF (269) 7 12 13
tCO (270) 9 33 34 39 44
tCF (271) 9 33 34 39 44
tPO (272) 7 12
tPF (273) 7 12
tSQ (274) 38
tDQ (275)
tDIV (276) 25
tPOINTVIRG (277) 3 31 32 33 34 35 36 37 38 39
tARROW (278)
tPOINT (279)
tPLUS (280) 24
tMINUS (281) 26
tMOD (282)
tEXP (283)
tSUP (284) 18 20
tINF (285) 19 21
tVIRG (286) 40 42 44 46
tEGALEGAL (287) 16
tEGAL (288) 20 21 30 32 37 38 39 42
tOR (289) 22
tAND (290) 23
tNOTEGAL (291) 17
tADDR (292)
tPOINTER (293) 10 27 35
tSPACE (294)
tLETTRE (295) 38
tNOMBRE (296) 28 33 34 37 39 44
tWORD (297) 8 9 10 29 31 32 33 34 35 36 37 38 39 40 42 44 46
tRETURN (298)
tNEWLINE (299) 2
tCOMMENT (300)
tMOINS (301)


Non-terminaux, suivis des règles où ils apparaissent

$accept (47)
    à gauche: 0
Input (48)
    à gauche: 1 2 3 4 5 6, à droite: 0 2 3 4 5 6 7 12 13
Main (49)
    à gauche: 7, à droite: 6
Arg (50)
    à gauche: 8 9 10 11, à droite: 7
If (51)
    à gauche: 12, à droite: 5 14
Else (52)
    à gauche: 13 14 15, à droite: 12
Condition (53)
    à gauche: 16 17 18 19 20 21 22 23, à droite: 12 22 23
Exp (54)
    à gauche: 24 25 26 27 28 29, à droite: 16 17 18 19 20 21 24 25
    26 27 30 32 42
Egalite (55)
    à gauche: 30, à droite: 3
Declaration (56)
    à gauche: 31 32 33 34 35 36 37 38 39, à droite: 4
DeclarationIntMemeLigne (57)
    à gauche: 40 41, à droite: 31 40
DeclarationIntEgalMemeLigne (58)
    à gauche: 42 43, à droite: 32 42
DeclarationIntTabMemeLigne (59)
    à gauche: 44 45, à droite: 33 44
DeclarationCharMemeLigne (60)
    à gauche: 46 47, à droite: 36 46


état 0

    0 $accept: . Input $end

    $défaut  réduction par utilisation de la règle 1 (Input)

    Input  aller à l'état 1


état 1

    0 $accept: Input . $end
    2 Input: Input . tNEWLINE
    3      | Input . Egalite tPOINTVIRG
    4      | Input . Declaration
    5      | Input . If
    6      | Input . Main

    $end      décalage et aller à l'état 2
    tINTEGER  décalage et aller à l'état 3
    tCHAR     décalage et aller à l'état 4
    tIF       décalage et aller à l'état 5
    tNOMBRE   décalage et aller à l'état 6
    tWORD     décalage et aller à l'état 7
    tNEWLINE  décalage et aller à l'état 8

    Main         aller à l'état 9
    If           aller à l'état 10
    Exp          aller à l'état 11
    Egalite      aller à l'état 12
    Declaration  aller à l'état 13


état 2

    0 $accept: Input $end .

    $défaut  accepter


état 3

    7 Main: tINTEGER . tMAIN tPO Arg tPF tAO Input tAF
   31 Declaration: tINTEGER . tWORD DeclarationIntMemeLigne tPOINTVIRG
   32            | tINTEGER . tWORD tEGAL Exp DeclarationIntEgalMemeLigne tPOINTVIRG
   33            | tINTEGER . tWORD tCO tNOMBRE tCF DeclarationIntTabMemeLigne tPOINTVIRG

    tMAIN  décalage et aller à l'état 14
    tWORD  décalage et aller à l'état 15


état 4

   34 Declaration: tCHAR . tWORD tCO tNOMBRE tCF tPOINTVIRG
   35            | tCHAR . tPOINTER tWORD tPOINTVIRG
   36            | tCHAR . tWORD DeclarationCharMemeLigne tPOINTVIRG
   37            | tCHAR . tWORD tEGAL tNOMBRE tPOINTVIRG
   38            | tCHAR . tWORD tEGAL tSQ tLETTRE tSQ tPOINTVIRG
   39            | tCHAR . tWORD tEGAL tCO tNOMBRE tCF tPOINTVIRG

    tPOINTER  décalage et aller à l'état 16
    tWORD     décalage et aller à l'état 17


état 5

   12 If: tIF . tPO Condition tPF tAO Input tAF Else

    tPO  décalage et aller à l'état 18


état 6

   28 Exp: tNOMBRE .

    $défaut  réduction par utilisation de la règle 28 (Exp)


état 7

   29 Exp: tWORD .

    $défaut  réduction par utilisation de la règle 29 (Exp)


état 8

    2 Input: Input tNEWLINE .

    $défaut  réduction par utilisation de la règle 2 (Input)


état 9

    6 Input: Input Main .

    $défaut  réduction par utilisation de la règle 6 (Input)


état 10

    5 Input: Input If .

    $défaut  réduction par utilisation de la règle 5 (Input)


état 11

   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp
   30 Egalite: Exp . tEGAL Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tEGAL     décalage et aller à l'état 22
    tPOINTER  décalage et aller à l'état 23


état 12

    3 Input: Input Egalite . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 24


état 13

    4 Input: Input Declaration .

    $défaut  réduction par utilisation de la règle 4 (Input)


état 14

    7 Main: tINTEGER tMAIN . tPO Arg tPF tAO Input tAF

    tPO  décalage et aller à l'état 25


état 15

   31 Declaration: tINTEGER tWORD . DeclarationIntMemeLigne tPOINTVIRG
   32            | tINTEGER tWORD . tEGAL Exp DeclarationIntEgalMemeLigne tPOINTVIRG
   33            | tINTEGER tWORD . tCO tNOMBRE tCF DeclarationIntTabMemeLigne tPOINTVIRG

    tCO    décalage et aller à l'état 26
    tVIRG  décalage et aller à l'état 27
    tEGAL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 41 (DeclarationIntMemeLigne)

    DeclarationIntMemeLigne  aller à l'état 29


état 16

   35 Declaration: tCHAR tPOINTER . tWORD tPOINTVIRG

    tWORD  décalage et aller à l'état 30


état 17

   34 Declaration: tCHAR tWORD . tCO tNOMBRE tCF tPOINTVIRG
   36            | tCHAR tWORD . DeclarationCharMemeLigne tPOINTVIRG
   37            | tCHAR tWORD . tEGAL tNOMBRE tPOINTVIRG
   38            | tCHAR tWORD . tEGAL tSQ tLETTRE tSQ tPOINTVIRG
   39            | tCHAR tWORD . tEGAL tCO tNOMBRE tCF tPOINTVIRG

    tCO    décalage et aller à l'état 31
    tVIRG  décalage et aller à l'état 32
    tEGAL  décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 47 (DeclarationCharMemeLigne)

    DeclarationCharMemeLigne  aller à l'état 34


état 18

   12 If: tIF tPO . Condition tPF tAO Input tAF Else

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Condition  aller à l'état 35
    Exp        aller à l'état 36


état 19

   25 Exp: Exp tDIV . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 37


état 20

   24 Exp: Exp tPLUS . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 38


état 21

   26 Exp: Exp tMINUS . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 39


état 22

   30 Egalite: Exp tEGAL . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 40


état 23

   27 Exp: Exp tPOINTER . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 41


état 24

    3 Input: Input Egalite tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 3 (Input)


état 25

    7 Main: tINTEGER tMAIN tPO . Arg tPF tAO Input tAF

    tINTEGER  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 11 (Arg)

    Arg  aller à l'état 43


état 26

   33 Declaration: tINTEGER tWORD tCO . tNOMBRE tCF DeclarationIntTabMemeLigne tPOINTVIRG

    tNOMBRE  décalage et aller à l'état 44


état 27

   40 DeclarationIntMemeLigne: tVIRG . tWORD DeclarationIntMemeLigne

    tWORD  décalage et aller à l'état 45


état 28

   32 Declaration: tINTEGER tWORD tEGAL . Exp DeclarationIntEgalMemeLigne tPOINTVIRG

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 46


état 29

   31 Declaration: tINTEGER tWORD DeclarationIntMemeLigne . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 47


état 30

   35 Declaration: tCHAR tPOINTER tWORD . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 48


état 31

   34 Declaration: tCHAR tWORD tCO . tNOMBRE tCF tPOINTVIRG

    tNOMBRE  décalage et aller à l'état 49


état 32

   46 DeclarationCharMemeLigne: tVIRG . tWORD DeclarationCharMemeLigne

    tWORD  décalage et aller à l'état 50


état 33

   37 Declaration: tCHAR tWORD tEGAL . tNOMBRE tPOINTVIRG
   38            | tCHAR tWORD tEGAL . tSQ tLETTRE tSQ tPOINTVIRG
   39            | tCHAR tWORD tEGAL . tCO tNOMBRE tCF tPOINTVIRG

    tCO      décalage et aller à l'état 51
    tSQ      décalage et aller à l'état 52
    tNOMBRE  décalage et aller à l'état 53


état 34

   36 Declaration: tCHAR tWORD DeclarationCharMemeLigne . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 54


état 35

   12 If: tIF tPO Condition . tPF tAO Input tAF Else
   22 Condition: Condition . tOR Condition
   23          | Condition . tAND Condition

    tPF   décalage et aller à l'état 55
    tOR   décalage et aller à l'état 56
    tAND  décalage et aller à l'état 57


état 36

   16 Condition: Exp . tEGALEGAL Exp
   17          | Exp . tNOTEGAL Exp
   18          | Exp . tSUP Exp
   19          | Exp . tINF Exp
   20          | Exp . tSUP tEGAL Exp
   21          | Exp . tINF tEGAL Exp
   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV       décalage et aller à l'état 19
    tPLUS      décalage et aller à l'état 20
    tMINUS     décalage et aller à l'état 21
    tSUP       décalage et aller à l'état 58
    tINF       décalage et aller à l'état 59
    tEGALEGAL  décalage et aller à l'état 60
    tNOTEGAL   décalage et aller à l'état 61
    tPOINTER   décalage et aller à l'état 23


état 37

   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   25    | Exp tDIV Exp .
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tMINUS  décalage et aller à l'état 21

    tMINUS    [réduction par utilisation de la règle 25 (Exp)]
    $défaut  réduction par utilisation de la règle 25 (Exp)


état 38

   24 Exp: Exp . tPLUS Exp
   24    | Exp tPLUS Exp .
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    tMINUS    [réduction par utilisation de la règle 24 (Exp)]
    $défaut  réduction par utilisation de la règle 24 (Exp)


état 39

   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   26    | Exp tMINUS Exp .
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    tDIV      [réduction par utilisation de la règle 26 (Exp)]
    tPLUS     [réduction par utilisation de la règle 26 (Exp)]
    tMINUS    [réduction par utilisation de la règle 26 (Exp)]
    tPOINTER  [réduction par utilisation de la règle 26 (Exp)]
    $défaut  réduction par utilisation de la règle 26 (Exp)


état 40

   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp
   30 Egalite: Exp tEGAL Exp .

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 30 (Egalite)


état 41

   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp
   27    | Exp tPOINTER Exp .

    tMINUS  décalage et aller à l'état 21

    tMINUS    [réduction par utilisation de la règle 27 (Exp)]
    $défaut  réduction par utilisation de la règle 27 (Exp)


état 42

    8 Arg: tINTEGER . tWORD
    9    | tINTEGER . tCO tCF tWORD
   10    | tINTEGER . tPOINTER tWORD

    tCO       décalage et aller à l'état 62
    tPOINTER  décalage et aller à l'état 63
    tWORD     décalage et aller à l'état 64


état 43

    7 Main: tINTEGER tMAIN tPO Arg . tPF tAO Input tAF

    tPF  décalage et aller à l'état 65


état 44

   33 Declaration: tINTEGER tWORD tCO tNOMBRE . tCF DeclarationIntTabMemeLigne tPOINTVIRG

    tCF  décalage et aller à l'état 66


état 45

   40 DeclarationIntMemeLigne: tVIRG tWORD . DeclarationIntMemeLigne

    tVIRG  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 41 (DeclarationIntMemeLigne)

    DeclarationIntMemeLigne  aller à l'état 67


état 46

   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp
   32 Declaration: tINTEGER tWORD tEGAL Exp . DeclarationIntEgalMemeLigne tPOINTVIRG

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tVIRG     décalage et aller à l'état 68
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 43 (DeclarationIntEgalMemeLigne)

    DeclarationIntEgalMemeLigne  aller à l'état 69


état 47

   31 Declaration: tINTEGER tWORD DeclarationIntMemeLigne tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 31 (Declaration)


état 48

   35 Declaration: tCHAR tPOINTER tWORD tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 35 (Declaration)


état 49

   34 Declaration: tCHAR tWORD tCO tNOMBRE . tCF tPOINTVIRG

    tCF  décalage et aller à l'état 70


état 50

   46 DeclarationCharMemeLigne: tVIRG tWORD . DeclarationCharMemeLigne

    tVIRG  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 47 (DeclarationCharMemeLigne)

    DeclarationCharMemeLigne  aller à l'état 71


état 51

   39 Declaration: tCHAR tWORD tEGAL tCO . tNOMBRE tCF tPOINTVIRG

    tNOMBRE  décalage et aller à l'état 72


état 52

   38 Declaration: tCHAR tWORD tEGAL tSQ . tLETTRE tSQ tPOINTVIRG

    tLETTRE  décalage et aller à l'état 73


état 53

   37 Declaration: tCHAR tWORD tEGAL tNOMBRE . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 74


état 54

   36 Declaration: tCHAR tWORD DeclarationCharMemeLigne tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 36 (Declaration)


état 55

   12 If: tIF tPO Condition tPF . tAO Input tAF Else

    tAO  décalage et aller à l'état 75


état 56

   22 Condition: Condition tOR . Condition

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Condition  aller à l'état 76
    Exp        aller à l'état 36


état 57

   23 Condition: Condition tAND . Condition

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Condition  aller à l'état 77
    Exp        aller à l'état 36


état 58

   18 Condition: Exp tSUP . Exp
   20          | Exp tSUP . tEGAL Exp

    tEGAL    décalage et aller à l'état 78
    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 79


état 59

   19 Condition: Exp tINF . Exp
   21          | Exp tINF . tEGAL Exp

    tEGAL    décalage et aller à l'état 80
    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 81


état 60

   16 Condition: Exp tEGALEGAL . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 82


état 61

   17 Condition: Exp tNOTEGAL . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 83


état 62

    9 Arg: tINTEGER tCO . tCF tWORD

    tCF  décalage et aller à l'état 84


état 63

   10 Arg: tINTEGER tPOINTER . tWORD

    tWORD  décalage et aller à l'état 85


état 64

    8 Arg: tINTEGER tWORD .

    $défaut  réduction par utilisation de la règle 8 (Arg)


état 65

    7 Main: tINTEGER tMAIN tPO Arg tPF . tAO Input tAF

    tAO  décalage et aller à l'état 86


état 66

   33 Declaration: tINTEGER tWORD tCO tNOMBRE tCF . DeclarationIntTabMemeLigne tPOINTVIRG

    tVIRG  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 45 (DeclarationIntTabMemeLigne)

    DeclarationIntTabMemeLigne  aller à l'état 88


état 67

   40 DeclarationIntMemeLigne: tVIRG tWORD DeclarationIntMemeLigne .

    $défaut  réduction par utilisation de la règle 40 (DeclarationIntMemeLigne)


état 68

   42 DeclarationIntEgalMemeLigne: tVIRG . tWORD tEGAL Exp DeclarationIntEgalMemeLigne

    tWORD  décalage et aller à l'état 89


état 69

   32 Declaration: tINTEGER tWORD tEGAL Exp DeclarationIntEgalMemeLigne . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 90


état 70

   34 Declaration: tCHAR tWORD tCO tNOMBRE tCF . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 91


état 71

   46 DeclarationCharMemeLigne: tVIRG tWORD DeclarationCharMemeLigne .

    $défaut  réduction par utilisation de la règle 46 (DeclarationCharMemeLigne)


état 72

   39 Declaration: tCHAR tWORD tEGAL tCO tNOMBRE . tCF tPOINTVIRG

    tCF  décalage et aller à l'état 92


état 73

   38 Declaration: tCHAR tWORD tEGAL tSQ tLETTRE . tSQ tPOINTVIRG

    tSQ  décalage et aller à l'état 93


état 74

   37 Declaration: tCHAR tWORD tEGAL tNOMBRE tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 37 (Declaration)


état 75

   12 If: tIF tPO Condition tPF tAO . Input tAF Else

    $défaut  réduction par utilisation de la règle 1 (Input)

    Input  aller à l'état 94


état 76

   22 Condition: Condition . tOR Condition
   22          | Condition tOR Condition .
   23          | Condition . tAND Condition

    tOR   décalage et aller à l'état 56
    tAND  décalage et aller à l'état 57

    tOR       [réduction par utilisation de la règle 22 (Condition)]
    tAND      [réduction par utilisation de la règle 22 (Condition)]
    $défaut  réduction par utilisation de la règle 22 (Condition)


état 77

   22 Condition: Condition . tOR Condition
   23          | Condition . tAND Condition
   23          | Condition tAND Condition .

    tOR   décalage et aller à l'état 56
    tAND  décalage et aller à l'état 57

    tOR       [réduction par utilisation de la règle 23 (Condition)]
    tAND      [réduction par utilisation de la règle 23 (Condition)]
    $défaut  réduction par utilisation de la règle 23 (Condition)


état 78

   20 Condition: Exp tSUP tEGAL . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 95


état 79

   18 Condition: Exp tSUP Exp .
   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 18 (Condition)


état 80

   21 Condition: Exp tINF tEGAL . Exp

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 96


état 81

   19 Condition: Exp tINF Exp .
   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 19 (Condition)


état 82

   16 Condition: Exp tEGALEGAL Exp .
   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 16 (Condition)


état 83

   17 Condition: Exp tNOTEGAL Exp .
   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 17 (Condition)


état 84

    9 Arg: tINTEGER tCO tCF . tWORD

    tWORD  décalage et aller à l'état 97


état 85

   10 Arg: tINTEGER tPOINTER tWORD .

    $défaut  réduction par utilisation de la règle 10 (Arg)


état 86

    7 Main: tINTEGER tMAIN tPO Arg tPF tAO . Input tAF

    $défaut  réduction par utilisation de la règle 1 (Input)

    Input  aller à l'état 98


état 87

   44 DeclarationIntTabMemeLigne: tVIRG . tWORD tCO tNOMBRE tCF DeclarationIntTabMemeLigne

    tWORD  décalage et aller à l'état 99


état 88

   33 Declaration: tINTEGER tWORD tCO tNOMBRE tCF DeclarationIntTabMemeLigne . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 100


état 89

   42 DeclarationIntEgalMemeLigne: tVIRG tWORD . tEGAL Exp DeclarationIntEgalMemeLigne

    tEGAL  décalage et aller à l'état 101


état 90

   32 Declaration: tINTEGER tWORD tEGAL Exp DeclarationIntEgalMemeLigne tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 32 (Declaration)


état 91

   34 Declaration: tCHAR tWORD tCO tNOMBRE tCF tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 34 (Declaration)


état 92

   39 Declaration: tCHAR tWORD tEGAL tCO tNOMBRE tCF . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 102


état 93

   38 Declaration: tCHAR tWORD tEGAL tSQ tLETTRE tSQ . tPOINTVIRG

    tPOINTVIRG  décalage et aller à l'état 103


état 94

    2 Input: Input . tNEWLINE
    3      | Input . Egalite tPOINTVIRG
    4      | Input . Declaration
    5      | Input . If
    6      | Input . Main
   12 If: tIF tPO Condition tPF tAO Input . tAF Else

    tINTEGER  décalage et aller à l'état 3
    tCHAR     décalage et aller à l'état 4
    tIF       décalage et aller à l'état 5
    tAF       décalage et aller à l'état 104
    tNOMBRE   décalage et aller à l'état 6
    tWORD     décalage et aller à l'état 7
    tNEWLINE  décalage et aller à l'état 8

    Main         aller à l'état 9
    If           aller à l'état 10
    Exp          aller à l'état 11
    Egalite      aller à l'état 12
    Declaration  aller à l'état 13


état 95

   20 Condition: Exp tSUP tEGAL Exp .
   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 20 (Condition)


état 96

   21 Condition: Exp tINF tEGAL Exp .
   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 21 (Condition)


état 97

    9 Arg: tINTEGER tCO tCF tWORD .

    $défaut  réduction par utilisation de la règle 9 (Arg)


état 98

    2 Input: Input . tNEWLINE
    3      | Input . Egalite tPOINTVIRG
    4      | Input . Declaration
    5      | Input . If
    6      | Input . Main
    7 Main: tINTEGER tMAIN tPO Arg tPF tAO Input . tAF

    tINTEGER  décalage et aller à l'état 3
    tCHAR     décalage et aller à l'état 4
    tIF       décalage et aller à l'état 5
    tAF       décalage et aller à l'état 105
    tNOMBRE   décalage et aller à l'état 6
    tWORD     décalage et aller à l'état 7
    tNEWLINE  décalage et aller à l'état 8

    Main         aller à l'état 9
    If           aller à l'état 10
    Exp          aller à l'état 11
    Egalite      aller à l'état 12
    Declaration  aller à l'état 13


état 99

   44 DeclarationIntTabMemeLigne: tVIRG tWORD . tCO tNOMBRE tCF DeclarationIntTabMemeLigne

    tCO  décalage et aller à l'état 106


état 100

   33 Declaration: tINTEGER tWORD tCO tNOMBRE tCF DeclarationIntTabMemeLigne tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 33 (Declaration)


état 101

   42 DeclarationIntEgalMemeLigne: tVIRG tWORD tEGAL . Exp DeclarationIntEgalMemeLigne

    tNOMBRE  décalage et aller à l'état 6
    tWORD    décalage et aller à l'état 7

    Exp  aller à l'état 107


état 102

   39 Declaration: tCHAR tWORD tEGAL tCO tNOMBRE tCF tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 39 (Declaration)


état 103

   38 Declaration: tCHAR tWORD tEGAL tSQ tLETTRE tSQ tPOINTVIRG .

    $défaut  réduction par utilisation de la règle 38 (Declaration)


état 104

   12 If: tIF tPO Condition tPF tAO Input tAF . Else

    tELSE  décalage et aller à l'état 108

    $défaut  réduction par utilisation de la règle 15 (Else)

    Else  aller à l'état 109


état 105

    7 Main: tINTEGER tMAIN tPO Arg tPF tAO Input tAF .

    $défaut  réduction par utilisation de la règle 7 (Main)


état 106

   44 DeclarationIntTabMemeLigne: tVIRG tWORD tCO . tNOMBRE tCF DeclarationIntTabMemeLigne

    tNOMBRE  décalage et aller à l'état 110


état 107

   24 Exp: Exp . tPLUS Exp
   25    | Exp . tDIV Exp
   26    | Exp . tMINUS Exp
   27    | Exp . tPOINTER Exp
   42 DeclarationIntEgalMemeLigne: tVIRG tWORD tEGAL Exp . DeclarationIntEgalMemeLigne

    tDIV      décalage et aller à l'état 19
    tPLUS     décalage et aller à l'état 20
    tMINUS    décalage et aller à l'état 21
    tVIRG     décalage et aller à l'état 68
    tPOINTER  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 43 (DeclarationIntEgalMemeLigne)

    DeclarationIntEgalMemeLigne  aller à l'état 111


état 108

   13 Else: tELSE . tAO Input tAF
   14     | tELSE . If

    tIF  décalage et aller à l'état 5
    tAO  décalage et aller à l'état 112

    If  aller à l'état 113


état 109
